# hermes-agent

./: .gitignore  accounts.json  cli-config.yaml.example  cli.py  file.txt  hermes_constants.py  hermes_state.py  mcp_serve.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_agent.py  toolsets.py
.codegraph/: daemon.pid
agent/: agent_init.py  agent_runtime_helpers.py  anthropic_adapter.py  auxiliary_client.py  codex_runtime.py  conversation_loop.py  copilot_acp_client.py  gemini_cli_client.py  memory_manager.py  memory_provider.py  model_metadata.py  prompt_builder.py  usage_pricing.py
agent/transports/: codex.py
apps/desktop/: package.json  vite.config.ts
apps/desktop/electron/: main.cjs  preload.cjs  remote-readiness.cjs  remote-readiness.test.cjs  remote-ssh.cjs
apps/desktop/src/: global.d.ts  hermes.ts
apps/desktop/src/app/: desktop-controller.tsx
apps/desktop/src/app/chat/right-rail/: preview-file.tsx
apps/desktop/src/app/hooks/: use-keybinds.ts
apps/desktop/src/app/right-sidebar/: exec-target-badge.tsx  index.test.tsx  index.tsx  store.ts
apps/desktop/src/app/right-sidebar/files/: remote-folder-picker.tsx  tree.tsx  use-project-tree.ts
apps/desktop/src/app/right-sidebar/kanban/: index.test.ts  index.tsx
apps/desktop/src/app/session/hooks/: use-prompt-actions.test.tsx  use-prompt-actions.ts
apps/desktop/src/app/settings/: gateway-settings.tsx
apps/desktop/src/components/: boot-failure-reauth.test.ts
apps/desktop/src/i18n/: en.ts  ja.ts  types.ts  zh-hant.ts  zh.ts
apps/desktop/src/lib/: desktop-slash-commands.test.ts  desktop-slash-commands.ts
apps/desktop/src/store/: session.ts
apps/desktop/src/types/: hermes.ts
gateway/: kanban_watchers.py  run.py
hermes-desktop/: .env.example  Dockerfile  README.md  docker-compose.yml  setup.sh  start-desktop.sh  verify.sh
hermes_cli/: auth.py  commands.py  config.py  kanban.py  kanban_db.py  main.py  model_normalize.py  model_switch.py  models.py  plugins.py  providers.py  runtime_provider.py  setup.py  web_server.py
locales/: en.yaml
plugins/: hermes-omni-plugin  hermes-tool-slimmer
plugins/context_engine/virtual-context/: __init__.py  engine.py  plugin.yaml
plugins/model-providers/gemini/: __init__.py
plugins/model-providers/opencode-zen/: __init__.py
plugins/rtk-rewrite/: __init__.py  plugin.yaml
scripts/: install.ps1  run_tests.sh
skills/computer-use/common/: SKILL.md
skills/computer-use/computer-use-basics/: SKILL.md
skills/computer-use/linux/: SKILL.md
skills/computer-use/macos/: SKILL.md
skills/computer-use/windows/: SKILL.md
skills/hindsight/: SKILL.md
skills/software-development/codebase-memory/: SKILL.md
skills/software-development/frontend-development/: SKILL.md
skills/software-development/hermes-plugin-development/: SKILL.md
skills/software-development/hermes-plugin-development/references/: virtual-context-adapter.md
skills/temporal-awareness/: SKILL.md
tests/: test_hermes_constants.py  test_hermes_state.py  test_tui_gateway_server.py  test_tui_gateway_ws.py
tests/agent/: test_auxiliary_client.py  test_auxiliary_main_first.py  test_gemini_cli_client.py  test_vertex_ai_provider.py
tests/gateway/: restart_test_helpers.py  test_email.py  test_restart_drain.py  test_restart_notification.py
tests/hermes_cli/: test_api_key_providers.py  test_cmd_update.py  test_gemini_provider.py  test_kanban_core_functionality.py  test_model_normalize.py  test_model_provider_persistence.py  test_model_switch_authenticated_providers.py  test_model_switch_vertex.py  test_pip_install_detection.py  test_plugin_scanner_recursion.py  test_plugins.py  test_runtime_provider_resolution.py  test_tool_schema_selector_hook.py  test_web_server.py
tests/plugins/model_providers/: test_opencode_go_profile.py
tests/providers/: test_provider_profiles.py
tests/run_agent/: test_memory_sync_interrupted.py  test_provider_attribution_headers.py  test_provider_parity.py  test_run_agent.py  test_run_agent_codex_responses.py
tests/tools/: test_computer_use.py  test_voice_mode.py
tools/: computer_use_common.py  computer_use_grammar.py  computer_use_linux.py  computer_use_macos.py  computer_use_safety.py  computer_use_tool.py  computer_use_windows.py  lazy_deps.py  send_message_tool.py  web_tools.py
tui_gateway/: server.py  ws.py
website/docs/integrations/: providers.md
website/docs/reference/: environment-variables.md
website/docs/user-guide/features/: web-dashboard.md
