# PEP 639 SPDX license expression (`license = "MIT"` below) requires
# setuptools>=77. Keep this floor in lockstep with the `license` form in
# [project]; an older build backend rejects the string form.
[build-system]
requires = ["setuptools>=77.0,<83"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-agent"
version = "0.15.1"
description = "The self-improving AI agent — creates skills from experience, improves them during use, and runs anywhere"
readme = "README.md"
# Upper bound is load-bearing, not cosmetic. uv resolves the project's
# Python from `requires-python`, and an inherited `UV_PYTHON` env var (or a
# fresh distro whose newest interpreter uv auto-picks) will otherwise select
# 3.14, where Rust-backed transitives (e.g. pydantic-core) have no cp314
# wheel yet and fall back to a maturin source build that fails. Capping at
# <3.14 makes uv refuse 3.14 with a clear error instead of attempting that
# build. Raise the ceiling once our Rust transitives ship cp314 wheels.
requires-python = ">=3.11,<3.14"
authors = [{ name = "Nous Research" }]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  # Core — every direct dep is exact-pinned to ==X.Y.Z (no ranges).
  # Rationale: ranges allow PyPI to ship a fresh version of a transitive
  # at any time without a code review on our side. Exact pins mean the
  # only way a new package version reaches a user is via an intentional
  # update on our end (bump the pin in this file, regenerate uv.lock).
  # This was tightened on 2026-05-12 in response to the Mini Shai-Hulud
  # worm hitting mistralai 2.4.6 on PyPI; if that release had been
  # captured by `mistralai>=2.3.0,<3` rather than an exact pin, every
  # install in the hours before the quarantine would have pulled it.
  #
  # When updating: bump the version below AND regenerate uv.lock with
  # `uv lock` so the transitive resolution stays consistent. Don't
  # introduce ranges back without a written justification.
  #
  # Scope rule: only packages used by EVERY hermes session belong here.
  # Anything that's provider-specific (`anthropic`, `firecrawl-py`,
  # `exa-py`, `fal-client`, `edge-tts`, `parallel-web`) belongs in an
  # extra and gets lazy-installed via `tools/lazy_deps.py` when the
  # user picks that backend. Smaller `dependencies` = smaller blast
  # radius for the next supply-chain attack.
  "openai==2.24.0",
  "python-dotenv==1.2.2",
  "fire==0.7.1",
  "httpx[socks]==0.28.1",
  "rich==14.3.3",
  "tenacity==9.1.4",
  "pyyaml==6.0.3",
  "ruamel-yaml==0.18.17",
  "requests==2.33.0",  # CVE-2026-25645
  "jinja2==3.1.6",
  # Bumped from 2.12.5 to 2.13.4 to pull in pydantic-core 2.46.4.
  # pydantic-core 2.41.5 (pulled by 2.12.5) segfaults when the OpenAI SDK's
  # Responses API resource is exercised from a non-main thread, which is the
  # codex_responses dispatch in agent/chat_completion_helpers.py:_call.
  "pydantic==2.13.4",
  # Interactive CLI (prompt_toolkit is used directly by cli.py)
  "prompt-toolkit==3.0.52",
  # Cron scheduler (built-in feature — scheduled cron/interval jobs use croniter).
  "croniter==6.0.0",
  # Markdown -> HTML conversion for rich message delivery (Matrix
  # `formatted_body`, and the `send_message` tool's HTML path). Now on the
  # DEFAULT delivery path, not matrix-specific: without it both
  # gateway/platforms/matrix.py and tools/send_message_tool.py silently fall
  # back to plain text, so cron/agent deliveries render raw `##`/`**`/tables
  # in clients like Element (see #32486). Pure-Python py3-none-any wheel
  # (~108KB, no compiled extensions, no platform constraints), so unlike the
  # matrix extra's `mautrix`/`python-olm` it's safe to ship everywhere — keeps
  # it out of the lazy-install path that exists only for the heavy matrix deps.
  "markdown==3.10.2",
  # Skills Hub (GitHub App JWT auth — optional, only needed for bot identity)
  "pyjwt[crypto]==2.12.1",  # CVE-2026-32597
  # Windows has no IANA tzdata shipped with the OS, so Python's ``zoneinfo``
  # (PEP 615) raises ``ZoneInfoNotFoundError`` for every non-UTC timezone
  # out of the box.  ``tzdata`` ships the Olson database as a data package
  # Python resolves automatically.  No-op on Linux/macOS (which have
  # /usr/share/zoneinfo).  Credits: PR #13182 (@sprmn24).
  "tzdata==2025.3; sys_platform == 'win32'",
  # Cross-platform process / PID management.  `psutil` is the canonical
  # answer for "is this PID alive" and process-tree walking across Linux,
  # macOS and Windows.  It replaces POSIX-only idioms like `os.kill(pid, 0)`
  # (which is a silent killer on Windows — see CONTRIBUTING.md) and
  # `os.killpg` (which doesn't exist on Windows).
  "psutil==7.2.2",
  # .gitignore-aware file matching for desktop build stamp.
  "pathspec==1.1.1",
  "fastapi>=0.104.0,<1",
  "uvicorn[standard]>=0.24.0,<1",
  "ptyprocess>=0.7.0,<1; sys_platform != 'win32'",
  "pywinpty>=2.0.0,<3; sys_platform == 'win32'",
  "absl-py>=2.4.0",
  "agent-client-protocol>=0.9.0",
  "aiofiles>=24.1.0",
  "aiohappyeyeballs>=2.6.1",
  "aiohttp>=3.13.3",
  "aiohttp-retry>=2.9.1",
  "aiohttp-socks>=0.11.0",
  "aiosignal>=1.4.0",
  "aiosqlite>=0.22.1",
  "alibabacloud-credentials>=1.0.8",
  "alibabacloud-credentials-api>=1.0.0",
  "alibabacloud-dingtalk>=2.2.42",
  "alibabacloud-endpoint-util>=0.0.4",
  "alibabacloud-gateway-dingtalk>=1.0.2",
  "alibabacloud-gateway-spi>=0.0.3",
  "alibabacloud-openapi-util>=0.2.4",
  "alibabacloud-tea>=0.4.3",
  "alibabacloud-tea-openapi>=0.4.4",
  "alibabacloud-tea-util>=0.3.14",
  "annotated-doc>=0.0.4",
  "annotated-types>=0.7.0",
  "anthropic>=0.86.0",
  "antlr4-python3-runtime>=4.13.2",
  "anyio>=4.12.1",
  "apscheduler>=3.11.2",
  "ast-serialize>=0.5.0",
  "asttokens>=3.0.1",
  "astunparse>=1.6.3",
  "asyncpg>=0.31.0",
  "atroposlib",
  "attrs>=25.4.0",
  "av>=17.0.0",
  "azure-core>=1.41.0",
  "azure-identity>=1.25.3",
  "base58>=2.1.1",
  "boto3>=1.42.89",
  "botocore>=1.42.89",
  "cbor2>=5.8.0",
  "certifi>=2026.2.25",
  "cffi>=2.0.0",
  "charset-normalizer>=3.4.4",
  "click>=8.3.1",
  "cloudpickle>=3.1.2",
  "comm>=0.2.3",
  "contourpy>=1.3.3",
  "coverage>=7.14.1",
  "cryptography>=46.0.7",
  "ctranslate2>=4.7.1",
  "cuda-bindings>=13.3.1",
  "cuda-pathfinder>=1.5.5",
  "cuda-toolkit>=13.3.0",
  "cycler>=0.12.1",
  "cython>=3.2.5",
  "darabonba-core>=1.0.5",
  "datasets>=5.0.0",
  "dateparser>=1.4.0",
  "davey>=0.1.4",
  "daytona>=0.155.0",
  "daytona-api-client>=0.155.0",
  "daytona-api-client-async>=0.155.0",
  "daytona-toolbox-api-client>=0.155.0",
  "daytona-toolbox-api-client-async>=0.155.0",
  "debugpy>=1.8.20",
  "decorator>=5.3.1",
  "defusedxml>=0.7.1",
  "deprecated>=1.3.1",
  "dill>=0.4.1",
  "dingtalk-stream>=0.24.3",
  "discord-py>=2.7.1",
  "distro>=1.9.0",
  "docstring-parser>=0.17.0",
  "edge-tts>=7.2.7",
  "editables>=0.6",
  "einops>=0.8.2",
  "elevenlabs>=1.59.0",
  "environs>=14.6.0",
  "et-xmlfile>=2.0.0",
  "eval-type-backport>=0.3.1",
  "exa-py>=2.10.2",
  "execnet>=2.1.2",
  "executing>=2.2.1",
  "fal-client>=0.13.1",
  "farama-notifications>=0.0.6",
  "faster-whisper>=1.2.1",
  "filelock>=3.24.3",
  "firecrawl-py>=4.17.0",
  "flatbuffers>=25.12.19",
  "fonttools>=4.63.0",
  "frozenlist>=1.8.0",
  "fsspec>=2026.2.0",
  "gast>=0.7.0",
  "gitdb>=4.0.12",
  "gitpython>=3.1.50",
  "google-ai-generativelanguage>=0.6.15",
  "google-api-core>=2.30.3",
  "google-api-python-client>=2.194.0",
  "google-auth>=2.49.2",
  "google-auth-httplib2>=0.3.1",
  "google-auth-oauthlib>=1.3.1",
  "google-cloud-aiplatform>=1.156.0",
  "google-cloud-bigquery>=3.41.0",
  "google-cloud-core>=2.6.0",
  "google-cloud-resource-manager>=1.17.0",
  "google-cloud-storage>=3.11.0",
  "google-crc32c>=1.8.0",
  "google-genai>=2.8.0",
  "google-generativeai>=0.8.6",
  "google-pasta>=0.2.0",
  "google-resumable-media>=2.10.0",
  "googleapis-common-protos>=1.73.0",
  "grpc-google-iam-v1>=0.14.4",
  "grpcio>=1.81.0",
  "grpcio-status>=1.71.2",
  "grpclib>=0.4.9",
  "gymnasium>=1.3.0",
  "h11>=0.16.0",
  "h2>=4.3.0",
  "h5py>=3.16.0",
  "hatchling>=1.30.1",
  "hermes-cli>=0.0.1.4",
  "hf-transfer>=0.1.9",
  "hf-xet>=1.3.1",
  "hindsight-client>=0.6.1",
  "honcho-ai>=2.0.1",
  "hpack>=4.1.0",
  "httpcore>=1.0.9",
  "httplib2>=0.31.2",
  "httptools>=0.7.1",
  "httpx-sse>=0.4.3",
  "huggingface-hub>=1.4.1",
  "hyperframe>=6.1.0",
  "idna>=3.15",
  "importlib-metadata>=8.7.1",
  "iniconfig>=2.3.0",
  "ipykernel>=7.2.0",
  "ipython>=9.14.1",
  "ipython-pygments-lexers>=1.1.1",
  "jedi>=0.20.0",
  "jiter>=0.13.0",
  "jmespath>=1.1.0",
  "joblib>=1.5.3",
  "jsonlines>=4.0.0",
  "jsonpath-python>=1.1.6",
  "jsonschema>=4.26.0",
  "jsonschema-specifications>=2025.9.1",
  "jupyter-client>=8.9.0",
  "jupyter-core>=5.9.1",
  "keras>=3.14.1",
  "kiwisolver>=1.5.0",
  "lark-oapi>=1.5.3",
  "latex2sympy2-extended>=1.11.0",
  "libclang>=18.1.1",
  "librt>=0.11.0",
  "linkify-it-py>=2.1.0",
  "markdown-it-py>=4.0.0",
  "markupsafe>=3.0.3",
  "marshmallow>=4.2.2",
  "math-verify>=0.9.0",
  "matplotlib>=3.10.9",
  "matplotlib-inline>=0.2.2",
  "mautrix>=0.21.0",
  "mcp>=1.26.0",
  "mdit-py-plugins>=0.6.1",
  "mdurl>=0.1.2",
  "memory-profiler>=0.61.0",
  "mistralai>=2.4.8",
  "ml-dtypes>=0.5.4",
  "modal>=1.3.4",
  "mpmath>=1.3.0",
  "msal>=1.36.0",
  "msal-extensions>=1.3.1",
  "msgpack>=1.1.2",
  "multidict>=6.7.1",
  "multiprocess>=0.70.19",
  "mypy>=2.1.0",
  "mypy-extensions>=1.1.0",
  "namex>=0.1.0",
  "nebius>=0.3.76",
  "nest-asyncio>=1.6.0",
  "networkx>=3.6.1",
  "ninja>=1.13.0",
  "nltk>=3.9.4",
  "nuitka>=2.8.10",
  "numpy>=2.4.3",
  "nvidia-cublas>=13.5.1.27",
  "nvidia-cuda-cupti>=13.3.35",
  "nvidia-cuda-nvrtc>=13.3.33",
  "nvidia-cuda-runtime>=13.3.29",
  "nvidia-cudnn-cu13>=9.23.0.39",
  "nvidia-cufft>=12.3.0.29",
  "nvidia-cufile>=1.18.0.66",
  "nvidia-curand>=10.4.3.29",
  "nvidia-cusolver>=12.2.2.18",
  "nvidia-cusparse>=12.8.1.7",
  "nvidia-cusparselt-cu13>=0.9.1",
  "nvidia-nccl-cu13>=2.30.4",
  "nvidia-nvjitlink>=13.3.33",
  "nvidia-nvshmem-cu13>=3.6.5",
  "nvidia-nvtx>=13.3.29",
  "oauthlib>=3.3.1",
  "obstore>=0.8.2",
  "onnxruntime>=1.24.4",
  "openpyxl>=3.1.5",
  "opentelemetry-api>=1.39.1",
  "opentelemetry-exporter-otlp-proto-common>=1.39.1",
  "opentelemetry-exporter-otlp-proto-http>=1.39.1",
  "opentelemetry-instrumentation>=0.60b1",
  "opentelemetry-instrumentation-aiohttp-client>=0.60b1",
  "opentelemetry-proto>=1.39.1",
  "opentelemetry-sdk>=1.39.1",
  "opentelemetry-semantic-conventions>=0.60b1",
  "opentelemetry-util-http>=0.60b1",
  "opt-einsum>=3.4.0",
  "optree>=0.19.1",
  "ordered-set>=4.1.0",
  "orjson>=3.11.9",
  "packaging>=26.0",
  "pandas>=3.0.3",
  "parallel-web>=0.4.2",
  "parso>=0.8.7",
  "pexpect>=4.9.0",
  "pillow>=12.2.0",
  "pip>=26.1.2",
  "platformdirs>=4.10.0",
  "pluggy>=1.6.0",
  "polars>=1.41.2",
  "polars-runtime-32>=1.41.2",
  "portalocker>=3.2.0",
  "propcache>=0.4.1",
  "proto-plus>=1.27.2",
  "protobuf>=5.29.6",
  "psycopg>=3.3.4",
  "psycopg-binary>=3.3.4",
  "psycopg-pool>=3.3.1",
  "psycopg2>=2.9.12",
  "psycopg2-binary>=2.9.12",
  "ptyprocess>=0.7.0",
  "pure-eval>=0.2.3",
  "py-cpuinfo>=9.0.0",
  "pyarrow>=24.0.0",
  "pyasn1>=0.6.3",
  "pyasn1-modules>=0.4.2",
  "pycompile>=0.2.3",
  "pycparser>=3.0",
  "pycryptodome>=3.23.0",
  "pydantic-cli>=10.0.0",
  "pydantic-core>=2.46.4",
  "pydantic-settings>=2.13.1",
  "pygments>=2.19.2",
  "pynacl>=1.5.0",
  "pyparsing>=3.3.2",
  "pypng>=0.20220715.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-benchmark>=4.0.0",
  "pytest-cov>=7.1.0",
  "pytest-timeout>=2.4.0",
  "pytest-xdist>=3.8.0",
  "python-dateutil>=2.9.0.post0",
  "python-multipart>=0.0.27",
  "python-olm>=3.2.16",
  "python-socks>=2.8.1",
  "python-telegram-bot>=22.6",
  "pytz>=2025.2",
  "pyzmq>=27.1.0",
  "qrcode>=7.4.2",
  "referencing>=0.37.0",
  "regex>=2026.5.9",
  "requests-oauthlib>=2.0.0",
  "requests-toolbelt>=1.0.0",
  "rpds-py>=0.30.0",
  "ruamel-yaml-clib>=0.2.15",
  "ruff>=0.15.10",
  "s3transfer>=0.16.0",
  "safetensors>=0.7.0",
  "scikit-learn>=1.9.0",
  "scipy>=1.17.1",
  "sentence-transformers>=5.5.1",
  "sentry-sdk>=2.61.1",
  "setuptools>=82.0.1",
  "shapely>=2.1.2",
  "shellingham>=1.5.4",
  "simple-term-menu>=1.6.6",
  "six>=1.17.0",
  "slack-bolt>=1.27.0",
  "slack-sdk>=3.40.1",
  "smmap>=5.0.3",
  "sniffio>=1.3.1",
  "socksio>=1.0.0",
  "sounddevice>=0.5.5",
  "sse-starlette>=3.3.2",
  "stack-data>=0.6.3",
  "starlette>=1.0.1",
  "sympy>=1.14.0",
  "synchronicity>=0.11.1",
  "tabulate>=0.9.0",
  "tensorflow>=2.20.0",
  "termcolor>=3.3.0",
  "textual>=8.2.7",
  "threadpoolctl>=3.6.0",
  "tiktoken>=0.13.0",
  "tokenizers>=0.22.2",
  "toml>=0.10.2",
  "torch>=2.9.1",
  "torchao>=0.17.0",
  "torchaudio>=2.11.0",
  "torchvision>=0.24.1",
  "tornado>=6.5.5",
  "tqdm>=4.67.3",
  "traitlets>=5.15.1",
  "transformers>=5.3.0",
  "tree-sitter>=0.25.2",
  "tree-sitter-c-sharp>=0.23.5",
  "tree-sitter-embedded-template>=0.25.0",
  "tree-sitter-language-pack>=1.8.1",
  "tree-sitter-yaml>=0.7.2",
  "triton>=3.5.1",
  "trove-classifiers>=2026.6.1.19",
  "ty>=0.0.21",
  "typer>=0.24.1",
  "types-certifi>=2021.10.8.3",
  "types-pyyaml>=6.0.12.20260518",
  "types-toml>=0.10.8.20240310",
  "typing-extensions>=4.15.0",
  "typing-inspection>=0.4.2",
  "tzlocal>=5.3.1",
  "uc-micro-py>=2.0.0",
  "unpaddedbase64>=2.1.0",
  "uritemplate>=4.2.0",
  "urllib3>=2.6.3",
  "uvloop>=0.22.1",
  "vercel>=0.5.9",
  "vercel-workers>=0.0.8",
  "vertexai>=1.43.0",
  "wandb>=0.27.1",
  "watchfiles>=1.1.1",
  "wcwidth>=0.6.0",
  "websockets>=15.0.1",
  "wheel>=0.47.0",
  "wrapt>=1.17.3",
  "xxhash>=3.7.0",
  "yarl>=1.22.0",
  "youtube-transcript-api>=1.2.4",
  "zipp>=3.23.0",
  "zstandard>=0.25.0",
  "hermes-omni-plugin",
  "virtual-context",
]

[project.optional-dependencies]
# Native Anthropic provider — only needed when provider=anthropic (not via
# OpenRouter or other aggregators).
anthropic = ["anthropic==0.86.0"]
# Web search backends — each only loaded when the user picks it as their
# search provider (configured via `hermes tools` or config.yaml).
exa = ["exa-py==2.10.2"]
firecrawl = ["firecrawl-py==4.17.0"]
parallel-web = ["parallel-web==0.4.2"]
# Image generation backends
fal = ["fal-client==0.13.1"]
# Edge TTS — default TTS provider but still optional (users can pick
# ElevenLabs / OpenAI / MiniMax instead).
edge-tts = ["edge-tts==7.2.7"]
modal = ["modal==1.3.4"]
daytona = ["daytona==0.155.0"]
hindsight = ["hindsight-client==0.6.1"]
dev = ["debugpy==1.8.20", "pytest==9.0.2", "pytest-asyncio==1.3.0", "pytest-timeout==2.4.0", "mcp==1.26.0", "starlette==1.0.1", "ty==0.0.21", "ruff==0.15.10", "setuptools==82.0.1"]  # starlette: CVE-2026-48710
messaging = ["python-telegram-bot[webhooks]==22.6", "discord.py[voice]==2.7.1", "aiohttp==3.13.3", "brotlicffi==1.2.0.1", "slack-bolt==1.27.0", "slack-sdk==3.40.1", "qrcode==7.4.2"]
cron = []  # croniter is now a core dependency; this extra kept for back-compat
slack = ["slack-bolt==1.27.0", "slack-sdk==3.40.1", "aiohttp==3.13.3"]
matrix = ["mautrix[encryption]==0.21.0", "aiosqlite==0.22.1", "asyncpg==0.31.0", "aiohttp-socks==0.11.0"]
# WeCom callback-mode adapter — parses untrusted XML POST bodies from
# WeCom-controlled callback endpoints, so we use defusedxml (drop-in
# replacement for stdlib xml.etree.ElementTree) to block billion-laughs
# and XXE. aiohttp/httpx are already in [messaging]; defusedxml lands
# here to keep the dependency local to wecom_callback's threat model.
wecom = ["defusedxml==0.7.1"]
cli = ["simple-term-menu==1.6.6"]
tts-premium = ["elevenlabs==1.59.0"]
voice = [
  # Local STT pulls in wheel-only transitive deps (ctranslate2, onnxruntime),
  # so keep it out of the base install for source-build packagers like Homebrew.
  "faster-whisper==1.2.1",
  "sounddevice==0.5.5",
  "numpy==2.4.3",
]
pty = [
  # Kept as a no-op back-compat alias — `ptyprocess` and `pywinpty` are now
  # in the main `dependencies` list (with the same platform markers), so
  # any existing `pip install hermes-agent[pty]` invocations resolve cleanly
  # without pulling in extra packages.
]
honcho = ["honcho-ai==2.0.1"]
# Image resize recovery for the vision tools.  Pillow is a soft dependency:
# vision_tools / conversation_compression degrade gracefully without it (they
# log and skip the resize), but without it the byte AND pixel-dimension shrink
# paths silently no-op, so an oversized image (>5 MB or >8000px) bakes into
# immutable history and bricks the session on Anthropic's non-retryable 400.
# Declared here so packagers (Nix, Homebrew) ship it with [all] and so
# `pip install hermes-agent[vision]` / the lazy-install path can resolve it.
vision = ["Pillow==12.2.0"]
# CVE-2026-48710 (BadHost): Starlette is pulled transitively by mcp's
# sse-starlette / HTTP-SSE stack (and by fastapi in the `web` extra). Before
# 1.0.1, a malformed Host header makes `request.url.path` desync from the path
# the ASGI router actually dispatched, so middleware/endpoints that gate on
# `request.url` can be bypassed. We pin a patched Starlette directly in every
# extra that exposes a Starlette-backed server surface so pip/uv can't resolve
# a vulnerable pre-1.0.1 transitive. Bump in lockstep with uv.lock.
mcp = ["mcp==1.26.0", "starlette==1.0.1"]  # starlette: CVE-2026-48710
nemo-relay = ["nemo-relay==0.3"]
homeassistant = ["aiohttp==3.13.3"]
sms = ["aiohttp==3.13.3"]
# Computer use — macOS background desktop control via cua-driver (MCP stdio).
# The cua-driver binary itself is installed via `hermes tools` post-setup
# (curl install script); this extra just pins the MCP client used to talk
# to it, which is already provided by the `mcp` extra.
computer-use = ["mcp==1.26.0", "starlette==1.0.1"]  # starlette: CVE-2026-48710
acp = ["agent-client-protocol==0.9.0"]
# mistral: Voxtral STT + TTS. Pinned to an exact verified-clean version.
# The `mistralai` PyPI project was quarantined 2026-05-12 after the malicious
# 2.4.6 release (Mini Shai-Hulud worm); 2.4.6 was removed from PyPI and the
# project is serving clean releases again (2.4.7 2026-05-25, 2.4.8 2026-05-28).
# Like other opt-in TTS/STT backends, this is lazy-installed via
# tools/lazy_deps.py (stt.mistral / tts.mistral) at first use — deliberately
# NOT re-added to [all] so a future quarantined release can't break fresh
# installs (see [all] policy comment below).
mistral = ["mistralai==2.4.8"]
bedrock = ["boto3==1.42.89"]
azure-identity = ["azure-identity==1.25.3"]
termux = [
  # Baseline Android / Termux path for reliable fresh installs.
  "python-telegram-bot[webhooks]==22.6",
  "hermes-agent[cron]",
  "hermes-agent[cli]",
  "hermes-agent[pty]",
  "hermes-agent[mcp]",
  "hermes-agent[honcho]",
  "hermes-agent[acp]",
]
termux-all = [
  # Best-effort "install all" profile for Termux. Same policy as [all]:
  # only includes extras that aren't covered by `tools/lazy_deps.py`.
  # Backends like telegram/slack/dingtalk/feishu/honcho lazy-install at
  # first use, so they're no longer eager-installed here.
  "hermes-agent[termux]",
  "hermes-agent[google]",
  "hermes-agent[homeassistant]",
  "hermes-agent[sms]",
  "hermes-agent[web]",
]
dingtalk = ["dingtalk-stream==0.24.3", "alibabacloud-dingtalk==2.2.42", "qrcode==7.4.2"]
feishu = ["lark-oapi==1.5.3", "qrcode==7.4.2"]
google = [
  # Required by the google-workspace skill (Gmail, Calendar, Drive, Contacts,
  # Sheets, Docs).  Declared here so packagers (Nix, Homebrew) ship them with
  # the [all] extra and users don't hit runtime `pip install` paths that fail
  # in environments without pip (e.g. Nix-managed Python).
  "google-api-python-client==2.194.0",
  "google-auth-oauthlib==1.3.1",
  "google-auth-httplib2==0.3.1",
]
youtube = [
  # Required by skills/media/youtube-content and
  # optional-skills/productivity/memento-flashcards (youtube_quiz.py).
  # Without this declaration uv sync omits the package and both skills fail
  # at first invocation with ModuleNotFoundError (issue #22243).
  "youtube-transcript-api==1.2.4",
]
# `hermes dashboard` (localhost SPA + API).  Not in core to keep the default install lean.
# starlette==1.0.1 pinned for CVE-2026-48710 (BadHost) — fastapi pulls Starlette
# transitively and pre-1.0.1 is the vulnerable range. See the mcp extra above.
web = ["fastapi==0.133.1", "uvicorn[standard]==0.41.0", "starlette==1.0.1"]
# Vertex AI provider — service-account / ADC auth for the GCP Gemini endpoint.
# Kept lean (just google-auth) so users who don't use Vertex don't pull in
# the broader [google] workspace skill stack. Not in [all] per the
# lazy-install policy below — google-auth is resolved at first use via
# LAZY_DEPS["provider.vertex"] when a user actually selects vertex.
vertex = ["google-auth>=2.0.0,<3"]
all = [
  # Policy (2026-05-12): `[all]` includes only extras that genuinely
  # CAN'T be lazy-installed via `tools/lazy_deps.py` — i.e. things every
  # session can use, things needed before the agent loop is alive
  # (terminal/CLI), and skill deps that packagers (Nix, AUR, Homebrew)
  # need in the wheel. Anything an opt-in backend (provider, search,
  # TTS, image, memory, messaging platform, terminal sandbox) needs
  # MUST live exclusively in `LAZY_DEPS` and resolve at first use —
  # otherwise one quarantined PyPI release breaks every fresh install.
  #
  # Removed from [all] on 2026-05-12 (covered by lazy-install):
  #   anthropic, exa, firecrawl, parallel-web, fal, edge-tts,
  #   modal, daytona, messaging (telegram/discord/slack),
  #   matrix, slack, honcho, voice (faster-whisper),
  #   dingtalk, feishu, bedrock, tts-premium (elevenlabs)
  #
  # Why: the matrix extra in particular pulls `mautrix[encryption]`
  # which depends on `python-olm`. python-olm has Linux-only wheels and
  # no native build path on Windows or modern macOS. With matrix in
  # [all], `uv sync --locked` on Windows tried to build it from sdist
  # and failed on `make`. Lazy-install routes that build to first use,
  # where the user is expected to have a toolchain available.
  "hermes-agent[cron]",
  "hermes-agent[cli]",
  "hermes-agent[pty]",
  "hermes-agent[mcp]",
  "hermes-agent[homeassistant]",
  "hermes-agent[sms]",
  "hermes-agent[acp]",
  "hermes-agent[google]",
  "hermes-agent[web]",
  "hermes-agent[youtube]",
]

[project.scripts]
hermes = "hermes_cli.main:main"
hermes-agent = "run_agent:main"
hermes-acp = "acp_adapter.entry:main"

[tool.setuptools]
py-modules = ["run_agent", "model_tools", "toolsets", "batch_runner", "trajectory_compressor", "toolset_distributions", "cli", "hermes_bootstrap", "hermes_constants", "hermes_state", "hermes_time", "hermes_logging", "utils", "mcp_serve"]

[tool.setuptools.data-files]
# i18n catalogs. locales/ is a bare data directory (no __init__.py), so it is
# neither a package (packages.find) nor package-data (which attaches to a
# package). data-files ships it in the wheel; MANIFEST.in `graft locales`
# ships it in the sdist. Without this, sealed installs (pip wheel, Nix store
# venv) drop the catalogs and gateway/CLI commands surface raw i18n keys like
# `gateway.reset.header_default` (#27632, #35374, #23943).
locales = ["locales/*.yaml"]

[tool.setuptools.package-data]
hermes_cli = ["web_dist/**/*", "tui_dist/**/*", "scripts/install.sh", "scripts/install.ps1"]
gateway = ["assets/**/*"]
plugins = [
  "*/dashboard/manifest.json",
  "*/dashboard/dist/*",
  "*/dashboard/dist/**/*",
  # Plugin discovery (hermes_cli/plugins.py) reads a plugin.yaml/plugin.yml
  # manifest from each bundled plugin directory to register it. Wheels only
  # carry files declared here, so without this glob the wheel ships every
  # plugin's Python code but none of its manifests — the scan finds zero
  # plugins and all gateway platforms fail with "No adapter available for
  # <platform>" (#34034), web-search providers go missing (#28149), etc.
  "**/plugin.yaml",
  "**/plugin.yml",
  "**/README.md",
]

[tool.setuptools.packages.find]
include = ["agent", "agent.*", "tools", "tools.*", "hermes_cli", "hermes_cli.*", "gateway", "gateway.*", "tui_gateway", "tui_gateway.*", "cron", "acp_adapter", "plugins", "plugins.*", "providers", "providers.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (API keys, Modal, etc.)",
    "real_concurrent_gate: opt out of the autouse stub that disables _detect_concurrent_hermes_instances",
]
# pytest-timeout: per-test 30s hard cap with signal method.
# This is the fallback inside each per-file pytest subprocess (see
# scripts/run_tests_parallel.py). Per-file isolation gives every test
# file a fresh Python interpreter; pytest-timeout catches Python-level
# hangs within a file.
addopts = "-m 'not integration' --timeout=30 --timeout-method=signal"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
unknown-argument = "warn"
redundant-cast = "ignore"

[tool.ruff]
preview = true  # required for PLW1514 (unspecified-encoding) — preview rule

[tool.ruff.lint]
# All other lints are intentionally disabled (see comment history on this
# file) while we wrangle typechecks — but PLW1514 is too load-bearing to
# keep off.  Bare open()/read_text()/write_text() in text mode defaults to
# the system locale encoding on Windows (cp1252 on US-locale installs),
# which silently corrupts any non-ASCII file content.  We had three
# separate Windows sandbox regressions in one debug session before
# adding the explicit encoding.  This rule keeps new code honest.
select = ["PLW1514"]

[tool.ruff.lint.per-file-ignores]
# Tests can intentionally exercise locale-encoding edge cases.
"tests/**" = ["PLW1514"]
# Skills and plugins are partially user-authored — their own conventions.
"skills/**" = ["PLW1514"]
"optional-skills/**" = ["PLW1514"]
"plugins/**" = ["PLW1514"]

[tool.uv.sources]
atroposlib = { git = "https://github.com/NousResearch/atropos.git", rev = "c20c85256e5a45ad31edf8b7276e9c5ee1995a30" }
hermes-omni-plugin = { path = "../hermes-omni-signal-engine", editable = true }
virtual-context = { path = "../virtual-context", editable = true }
